--- a/manifest.json
+++ b/manifest.json
@@ -12,9 +12,11 @@
     "scripts": ["jquery.min.js", "background.js"]
   },
   "browser_action": {
-    "default_icon": "icon.png",
+    "default_icon": "icon48.png",
     "default_popup": "popup.html"
   },
+  "icons": { "16": "icon16.png",
+           "48": "icon48.png"},
   "permissions": [
     "activeTab",
     "tabs",
